// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenderHTML an empty report returns the expected report 1`] = `
"<!doctype html>
<html lang="en-gb">
<head>
    <title></title>
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/default.min.css">
    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
    <link href='http://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
    <style>
        :root {
            --bs-font-sans-serif: Roboto, sans-serif;
        }
        pre, code {
            font-family: 'Roboto Mono', monospace;
        }
        pre {
            white-space: pre-wrap;
            white-space: -moz-pre-wrap;
            white-space: -pre-wrap;
            white-space: -o-pre-wrap;
            word-wrap: break-word;
            font-size: small;
        }
        @page {
            margin: 2rem;
            size: 21cm 29.7cm;
        }
        h1, h2, h3, h4, h5 {
            margin-top: 2rem;
            margin-bottom: 1.5rem;
        }
        hr {
            page-break-after: always;
            visibility: hidden;
        }
        html body * {
            page-break-inside: avoid;
        }
        html {
            font-family: Roboto, sans-serif;
        }
    </style>
</head>
<body>
<div class="container">
    <div class="row">
        <div class="col">
            <h1 id="emptyreport">Empty Report</h1>
<h1 id="summary">Summary</h1>
<p>This security report was conducted on 01/04/2020 at 01:30:10 (UTC+0).
A total of 0 issue(s) were found, 0 of which may require immediate attention.</p>
<p>This report is produced by running automated security scanning tools, which will likely not detect
all vulnerabilities present. <strong>It is not a replacement for a manual analysis of the application</strong>.</p>
<p>The following technical impacts may arise if an adversary successfully exploits one of the issues found by this scan.</p>
<h1 id="statistics">Statistics</h1>
<p>This report found issues with the following severities.</p>
<p><strong>Critical</strong>: 0 | <strong>High</strong> 0 | <strong>Medium</strong> 0 | <strong>Low</strong> 0 | <strong>Informational</strong> 0 | <strong>Unknown</strong> 0</p>
<p>To gain a better understanding of the severity levels please see <a href="#what-are-severity-levels">the appendix</a>.</p>
<h2 id="contents">Contents</h2>
<ul>
<li><a href="#summary">Summary</a><ul>
<li><a href="#statistics">Statistics</a></li></ul></li>
<li><a href="#overviewofissues">Overview of Issues</a></li>
<li><a href="#vulnerabilities">Vulnerabilities</a></li>
<li><a href="#additionalinformation">Additional Information</a><ul>
<li><a href="#whatareseveritylevels">What are severity levels?</a></li></ul></li>
</ul>
<h1 id="overviewofissues">Overview of Issues</h1>
<h1 id="vulnerabilities">Vulnerabilities</h1>
<h1 id="additionalinformation">Additional Information</h1>
<h2 id="whatareseveritylevels">What are severity levels?</h2>
<p>Issue severity is scored using the <a href="https://www.first.org/cvss/">Common Vulnerability Scoring System</a> (CVSS) where
such data is available. Severity levels do not represent the risk associated with an issue as risk depends on your
specific context. Severity scoring does however give an indication of the ease of exploitation and potential scope of an
attacks effect on an application.</p>
<h3 id="critical">Critical</h3>
<p>Exploitation will likely lead to an attacker gaining administrative access to the application and infrastructure that
supports it. Exploiting critical vulnerabilities is usually trivial and will generally not require prior access to the
application. <strong>A development team should aim to resolve these issues immediately by mitigating or directly resolving the
issue</strong>.</p>
<h3 id="high">High</h3>
<p>Exploitation could lead to an attacker gaining elevated access to the application and the infrastructure that supports
it. It is likely that an attacker will not find exploitation trivial. Such exploitation could lead to significant data
loss or downtime.</p>
<h3 id="medium">Medium</h3>
<p>Exploitation could lead to an attacker gaining limited access to the application. Exploiting vulnerabilities may require
an attacker to manipulate users to gain access to their credentials. Such exploitation could lead to limited data loss
or downtime.</p>
<h3 id="low">Low</h3>
<p>Exploitation will likely have very little impact on the application, and it is unlikely that an attacker will gain any
meaningful access to the application. Exploiting an issue of this severity will potentially require physical access to
the infrastructure that supports the application.</p>
<h3 id="informational">Informational</h3>
<p>While not part of the CVSS scoring specification, several security analysis tools use this severity level to indicate
that an issue is a matter of best practice. It is extremely unlikely that issues with this severity will lead to an
attacker gaining access to any application components.</p>
<h3 id="unknown">Unknown</h3>
<p>This severity level is used when the analysis tool used to perform a scan of the application does not associate any kind
of severity level with the issues or vulnerabilities it finds. Issues with an unknown severity should be investigated by
application developers and project stakeholders to establish the ease of exploitation, scope of any potential impact and
the specific risks associated.</p>
        </div>
    </div>
</div>
<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
        crossorigin="anonymous"></script>
<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
<script>hljs.highlightAll();</script>
</body>
</html>
"
`;

exports[`RenderHTML an full report returns the expected report 1`] = `
"<!doctype html>
<html lang="en-gb">
<head>
    <title></title>
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/default.min.css">
    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
    <link href='http://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
    <style>
        :root {
            --bs-font-sans-serif: Roboto, sans-serif;
        }
        pre, code {
            font-family: 'Roboto Mono', monospace;
        }
        pre {
            white-space: pre-wrap;
            white-space: -moz-pre-wrap;
            white-space: -pre-wrap;
            white-space: -o-pre-wrap;
            word-wrap: break-word;
            font-size: small;
        }
        @page {
            margin: 2rem;
            size: 21cm 29.7cm;
        }
        h1, h2, h3, h4, h5 {
            margin-top: 2rem;
            margin-bottom: 1.5rem;
        }
        hr {
            page-break-after: always;
            visibility: hidden;
        }
        html body * {
            page-break-inside: avoid;
        }
        html {
            font-family: Roboto, sans-serif;
        }
    </style>
</head>
<body>
<div class="container">
    <div class="row">
        <div class="col">
            <h1 id="securityreportforapplication">Security Report for application</h1>
<h1 id="summary">Summary</h1>
<p>This security report was conducted on 01/04/2020 at 01:30:10 (UTC+0).
A total of 1 issue(s) were found, 0 of which may require immediate attention.</p>
<p>This report is produced by running automated security scanning tools, which will likely not detect
all vulnerabilities present. <strong>It is not a replacement for a manual analysis of the application</strong>.</p>
<p>The following technical impacts may arise if an adversary successfully exploits one of the issues found by this scan.</p>
<ul>
<li><strong>Availability</strong>: DoS: Crash, Exit, or Restart</li>
<li><strong>Confidentiality</strong>: Read Application Data</li>
</ul>
<h1 id="statistics">Statistics</h1>
<p>This report found issues with the following severities.</p>
<p><strong>Critical</strong>: 0 | <strong>High</strong> 0 | <strong>Medium</strong> 0 | <strong>Low</strong> 0 | <strong>Informational</strong> 0 | <strong>Unknown</strong> 1</p>
<p>To gain a better understanding of the severity levels please see <a href="#what-are-severity-levels">the appendix</a>.</p>
<h2 id="contents">Contents</h2>
<ul>
<li><a href="#summary">Summary</a><ul>
<li><a href="#statistics">Statistics</a></li></ul></li>
<li><a href="#overviewofissues">Overview of Issues</a><ul>
<li><a href="#CWE-248">Uncaught Exception</a></li></ul></li>
<li><a href="#vulnerabilities">Vulnerabilities</a><ul>
<li><a href="#unknownseverity">Unknown (1)</a></li></ul></li>
<li><a href="#additionalinformation">Additional Information</a><ul>
<li><a href="#whatareseveritylevels">What are severity levels?</a></li></ul></li>
</ul>
<h1 id="overviewofissues">Overview of Issues</h1>
<p><a id="CWE-248"></a></p>
<h2 id="uncaughtexception">Uncaught Exception</h2>
<p>An exception is thrown from a function, but it is not caught.</p>
<p>When an exception is not caught</p>
<h3 id="consequences">Consequences</h3>
<p>Using a vulnerability of this type an attacker may be able to affect the system in the following ways.</p>
<ul>
<li><strong>Availability</strong>: DoS: Crash, Exit, or Restart</li>
<li><strong>Confidentiality</strong>: Read Application Data</li>
</ul>
<blockquote>
  <p>An uncaught exception</p>
</blockquote>
<p>For more information see <a href="https://cwe.mitre.org/data/definitions/248.html">CWE-248</a>.</p>
<h1 id="vulnerabilities">Vulnerabilities</h1>
<h2 id="unknownseverity">Unknown Severity</h2>
<h3 id="testissuetitle">test-issue-title</h3>
<p><strong>Severity</strong>: <a href="#unknown">Unknown</a> | <strong>Type</strong>: code smell | <strong>Fix</strong>: Unknown | <strong>Found By</strong>: <a href="https://www.npmjs.com/package/test-scanner">test-scanner</a></p>
<p>test-issue-description</p>
<h4 id="evidence">Evidence</h4>
<p>The following evidence of this vulnerability was found in the application.</p>
<p><code>application/src/Report</code> (starting on line: 2)</p>
<pre><code class="python language-python">import
</code></pre>
<p><code>application/src/Report</code> (starting on line: 2)</p>
<pre><code class="python language-python">import
</code></pre>
<p><code>application/src/Report</code> (starting on line: 2)</p>
<pre><code class="python language-python">import
</code></pre>
<p><code>application/src/Report</code> (starting on line: 2)</p>
<pre><code class="python language-python">import
</code></pre>
<p><code>application/src/Report</code> (starting on line: 2)</p>
<pre><code class="python language-python">import
</code></pre>
<h5 id="references">References</h5>
<p><a href="#CWE-248">CWE-248</a></p>
<h1 id="additionalinformation">Additional Information</h1>
<h2 id="whatareseveritylevels">What are severity levels?</h2>
<p>Issue severity is scored using the <a href="https://www.first.org/cvss/">Common Vulnerability Scoring System</a> (CVSS) where
such data is available. Severity levels do not represent the risk associated with an issue as risk depends on your
specific context. Severity scoring does however give an indication of the ease of exploitation and potential scope of an
attacks effect on an application.</p>
<h3 id="critical">Critical</h3>
<p>Exploitation will likely lead to an attacker gaining administrative access to the application and infrastructure that
supports it. Exploiting critical vulnerabilities is usually trivial and will generally not require prior access to the
application. <strong>A development team should aim to resolve these issues immediately by mitigating or directly resolving the
issue</strong>.</p>
<h3 id="high">High</h3>
<p>Exploitation could lead to an attacker gaining elevated access to the application and the infrastructure that supports
it. It is likely that an attacker will not find exploitation trivial. Such exploitation could lead to significant data
loss or downtime.</p>
<h3 id="medium">Medium</h3>
<p>Exploitation could lead to an attacker gaining limited access to the application. Exploiting vulnerabilities may require
an attacker to manipulate users to gain access to their credentials. Such exploitation could lead to limited data loss
or downtime.</p>
<h3 id="low">Low</h3>
<p>Exploitation will likely have very little impact on the application, and it is unlikely that an attacker will gain any
meaningful access to the application. Exploiting an issue of this severity will potentially require physical access to
the infrastructure that supports the application.</p>
<h3 id="informational">Informational</h3>
<p>While not part of the CVSS scoring specification, several security analysis tools use this severity level to indicate
that an issue is a matter of best practice. It is extremely unlikely that issues with this severity will lead to an
attacker gaining access to any application components.</p>
<h3 id="unknown">Unknown</h3>
<p>This severity level is used when the analysis tool used to perform a scan of the application does not associate any kind
of severity level with the issues or vulnerabilities it finds. Issues with an unknown severity should be investigated by
application developers and project stakeholders to establish the ease of exploitation, scope of any potential impact and
the specific risks associated.</p>
        </div>
    </div>
</div>
<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
        crossorigin="anonymous"></script>
<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
<script>hljs.highlightAll();</script>
</body>
</html>
"
`;
